Minor refactoring to cloudformation templates

--- a/cross-account-deployment-role.yml
+++ b/cross-account-deployment-role.yml
@@ -21,6 +21,7 @@ Resources:
           - Effect: Allow
             Principal:
               AWS: !Sub 'arn:aws:iam::${ExternalAccountId}:root'
+              Service: codebuild.amazonaws.com
             Action: sts:AssumeRole
       Path: '/'
       Policies:
