Updated ReadMe file

--- a/cross-account-deployment-role.yml
+++ b/cross-account-deployment-role.yml
@@ -14,7 +14,7 @@ Resources:
   DeploymentCrossAccountRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub crossaccount-deployment-role
+      RoleName: crossaccount-deployment-role
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
